--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="account-style.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        
+        /* استخدام نفس الدرجة المستخدمة في باقي صفحات التطبيق */
         .simple-header h1 {
             color: #6a6691; 
             font-weight: bold;
@@ -21,6 +21,7 @@
             font-weight: bold;
         }
 
+        /* السهم بنفس اللون الغامق */
         .back-link-main {
             color: #6a6691;
             text-decoration: none;
@@ -28,6 +29,7 @@
             margin-right: 10px;
         }
 
+        /* لضمان مسافة جيدة تحت الهيدر */
         .simple-header {
             display: flex;
             align-items: center;
@@ -76,5 +78,4 @@
         lucide.createIcons();
     </script>
 </body>
-
 </html>
